--- a/public/index.html
+++ b/public/index.html
@@ -13,12 +13,12 @@
         <meta property="og:type" content="website" />
         <meta
             property="og:url"
-            content="https://2023-sungbinland-conference-web.vercel.app/"
+            content="https://https://2023.sungbinland.day"
         />
         <meta property="og:title" content="2023 SBLD Conference" />
         <meta
             property="og:image"
-            content="https://2023-sungbinland-conference-web.vercel.app/OGimg.png"
+            content="https://2023.sungbinland.day/OGimg.png"
         />
         <meta property="og:description" content="2023 SBLD Conference" />
         <meta property="og:site_name" content="2023 SBLD Conference" />
